kubernetes/apps/downloads/sabnzbd/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

  egress:
    - toFQDNs: # linux isos
        - matchPattern: "*.blocknews.net"
        - matchPattern: "*.frugalusenet.com"
      toPorts:
        - ports:
            - port: "563"
    - toFQDNs:
        - matchName: "sabnzbd.org"
        - matchName: "drunkenslug.com"
      toPorts:
        - ports:
            - port: "443"
